[package]
name = "rs-asn1der2uuid7"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[dependencies.der]
version = "0.7.10"
default-features = false
features = [
	"std",
	"derive",
]

[dependencies.uuid]
version = "1.17.0"
default-features = false
features = [
	"std",
	"v7",
]
